added VERSION and COPYING files
darcs-hash:20070110171451-484ab-863297ddbb6a666309034fe5dd6dd863013ec508.gz

--- a/README
+++ b/README
@@ -1,4 +1,7 @@
-All information is available at
-http://www.chimeric.de/projects/dokuwiki/plugin/uparrow.
+Uparrow Plugin for DokuWiki
 
-Author: Michael Klier <chi@chimeric.de>
+All documentation for the Uparrow Plugin is available online at:
+http://www.chimeric.de/projects/dokuwiki/plugin/uparrow
+
+(c) 2005 - 2007 by Michael Klier <chi@chimeric.de>
+See COPYING for license info.
